Fixed clans icon and banner on mobile

--- a/src/themes/festive.less
+++ b/src/themes/festive.less
@@ -409,8 +409,11 @@ select.type-select {
     margin-top: .9rem !important;
 }
 
+.navigation-item {
+    background-color: black !important;
+}
+
 .navigation-item.selected {
-    background-color: #e18da9 !important;
     -webkit-filter: invert(100%);
     filter: invert(100%);
 }
